Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66933

SE_TabBarScroll*Button computation in QCommonStyle ignores proxy style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.0 Alpha
    • 5.9.2
    • Widgets: Styles
    • None
    • Observed on Windows 10/Qt 5.9.2.

      Might affect other platforms as well.

      Qt-wise probably all versions > 5.6 are affected.

       
    • b1d71ef8ad9331f2f9f96ca29dcc297fa97e77a3

    Description

      The computation of SE_TabBarScrollLeftButton and SE_TabBarScrollRightButton uses calls to pixelMetric() to determine the width (and overlap) of the buttons.

      These calls lack the "proxy()->" prologue which is used everywhere else and ignore the pixel metrics from the proxy style.

      Attachments

        For Gerrit Dashboard: QTBUG-66933
        # Subject Branch Project Status CR V

        Activity

          People

            chehrlic Christian Ehrlicher
            simhof Steffen Imhof
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes