QCommonStyle: use proxy pixelMetric for SE_TabBarScrollLeft/RightButton

When calculating the subElementRect for SE_TabBarScrollLeft/RightButton
and SE_ToolBarHandle, the frameRect() was not taken from the proxyStyle.

Task-number: QTBUG-66933
Change-Id: I7ae78d7050a6500f39e4741345283e1bf590e9cb
Reviewed-by: Thorbjørn Lund Martsum <tmartsum@gmail.com>
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@qt.io>